[package]
name = "gf"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
random-string = "1.0.0"
rand = "0.8.5"
colorful = "0.2.2"
spinners = "4.1.0"
