[package]
name = "gf"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool to generate a file with n lines, and n random alphanumeric characters per line."
homepage = "https://github.com/thesandybridge/random_file"
repository = "https://github.com/thesandybridge/random_file"
readme = "README.md"
keywords = ["cli", "generator", "files"]
categories = ["command-line-utilities"]

[lib]
name = "gf"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
random-string = "1.0.0"
rand = "0.8.5"
colorful = "0.2.2"
spinners = "4.1.0"
